--- a/src/css/sprintGame.css
+++ b/src/css/sprintGame.css
@@ -176,22 +176,47 @@
   transition: .2s;  
 }
 
-.end_game { 
-  position: absolute; 
-  width:20rem;
-  height: 20rem;
-  top: calc(50% - 10rem);
-  left: calc(50% - 10rem);
-  transition: 1s;
-  font-size: 1.5rem;
-  text-align: center;
-  vertical-align: middle;
-  background-color: rgba(255, 255, 255, .5);
-  border: grey solid 1px;
-  border-radius: 1rem;  
-  z-index: 200;
+/*========================================================*/
+
+.wrapper_end_game {
+  /*display: none;  
+  position: absolute;  
+  top: 120%;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transition: .5s;*/
+
+
+  position: absolute;
+  display: none;
+  
+  width: 0%; 
+  height: 0vh; 
+  background-color: rgba(51, 50, 50, 0.61); 
+  transition: all 1.5s;
 }
 
+.wrapper_end_game.active {
+  /*display: block; 
+  top: 0;
+  left: 0;
+  */
+  
+  position: absolute;
+  left: 0;
+  top: 7vh;
+  width: 100%; 
+  height: 86vh; 
+
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: all 1.5s;
+}
+
+/*
 .wrapper_end_game {
   display: none;  
   position: absolute;  
@@ -208,6 +233,45 @@
   left: 0;
   transition: .5s;
 }
+*/
+
+.end_game {
+  position: absolute; 
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  row-gap: 2vh;
+  width:20rem;
+  height: 20rem;  
+  transition: 1s;
+  font-size: 1.5rem;
+  text-align: center;
+  vertical-align: middle;
+  color: rgba(0, 0, 255, 0.9);
+  background-color: rgba(196, 196, 196, 0.7);
+  box-shadow: 0rem 0rem 10rem 5rem rgba(255, 238, 0, 0.603);
+  border: grey solid 1px;
+  border-radius: 2rem 2rem 0 2rem;  
+  z-index: 200;
+}
+/*
+.end_game { 
+  position: absolute; 
+  width:20rem;
+  height: 20rem;
+  top: calc(50% - 10rem);
+  left: calc(50% - 10rem);
+  transition: 1s;
+  font-size: 1.5rem;
+  text-align: center;
+  vertical-align: middle;
+  background-color: rgba(255, 255, 255, .5);
+  border: grey solid 1px;
+  border-radius: 1rem;  
+  z-index: 200;
+}
+*/
 
 .sprint_key_icon {
   position: relative;
