--- a/src/css/sprintGame.css
+++ b/src/css/sprintGame.css
@@ -1,3 +1,15 @@
+.wrapper_minigame {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%; 
+  height: 86vh; 
+  background-color: rgba(51, 50, 50, 0.61);  
+}
+
+/*
 .sprint_minigame {  
   display:flex;
   justify-content: center;
@@ -6,6 +18,7 @@
   padding-top: 5rem;
   transition: .5s;
 }
+*/
 
 .sprint_minigame.block {
   opacity: 0; 
@@ -20,17 +33,18 @@
 
 .game_content_wrapper {
   position: relative;
-  width:45%;
+  width: 50vw;
+  
   padding: 3% 3% 3% 3%;
   border: grey solid 1px;
-  border-radius: 1rem;
+  border-radius: 2rem 2rem 0 2rem;
   background-color: rgba(255, 255, 255, .5);
 }
 
 .total_score,
 .game_content,
 .bonus_carousel_wrapper {
-  margin: 2rem auto;
+  margin: 0.5rem auto;
   text-align: center;
 }
 
@@ -41,6 +55,7 @@
 .total_score {
   width: 100%;
   text-align: center;
+  color: rgba(0, 0, 255, 0.9);
   font-size: 2.5rem;
 }
 
@@ -138,13 +153,13 @@
   width: 4rem;
   height: 4rem;  
   opacity: 0; 
-  transition: .2s; 
+  transition: .5s; 
 }
 
 .answ_result_right.click, 
 .answ_result_false.click {
   opacity: 1;
-  transition: .2s;  
+  transition: .5s;  
 }
 
 .big,
@@ -179,37 +194,19 @@
 /*========================================================*/
 
 .wrapper_end_game {
-  /*display: none;  
-  position: absolute;  
-  top: 120%;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  transition: .5s;*/
-
-
   position: absolute;
-  display: none;
-  
+  display: none;  
   width: 0%; 
   height: 0vh; 
   background-color: rgba(51, 50, 50, 0.61); 
   transition: all 1.5s;
 }
 
-.wrapper_end_game.active {
-  /*display: block; 
-  top: 0;
-  left: 0;
-  */
-  
+.wrapper_end_game.active {  
   position: absolute;
-  left: 0;
-  top: 7vh;
+  left: 0;  
   width: 100%; 
-  height: 86vh; 
-
-
+  height: 100%; 
   display: flex;
   justify-content: center;
   align-items: center;
