--- a/src/css/statistic.css
+++ b/src/css/statistic.css
@@ -1,27 +1,53 @@
 .statistics_page {
-  padding: 5rem 5rem 5rem 5rem; 
-  margin: 0 auto;
-  display: flex;
-  flex-wrap: nowrap;
-  justify-content: space-between;
-}
-
-.statistics_page h2 {
-  background-color: rgb(240, 248, 255);
-  font-size: 1.2rem; 
+  width: 100%;
+  height: 86vh;  
+  
+  display: flex; 
+  flex-wrap: wrap;
+  justify-content: space-evenly;   
+  align-items: center;
+  background-color: rgba(51, 50, 50, 0.61);
+  background-image: url('../assets/img/statistics.png');
+  background-position: center;
+  background-size: 100%;
+  background-repeat: no-repeat;
+  backdrop-filter: blur(0.5rem);
 }
 
 .stat_section {
-  width: 30%;
-  height: 30%;
-  margin: 0 auto;
+  flex: 0 1 60vw;  
   background-color: rgba(196, 196, 196, 0.7);
+  border-radius: 0rem 2rem 0rem 2rem;  
+}
+.stat_section_wrapper {
+  border-radius: 0rem 2rem 0rem 2rem;
+  overflow: hidden;
+  box-shadow: 0rem 0rem 7rem 5rem rgba(0, 0, 255, 0.473); 
+  
 }
 
+.stat_title {
+  background-color: rgb(240, 248, 255);
+  font-size: 2rem; 
+  color: rgb(173, 15, 15);
+  text-align: center;
+}
+/*.stat_words {
+align-self: flex-start;
+}
+.stat_sprint {
+  align-self: center;
+}
+.stat_audio {
+  align-self: flex-end;
+}*/
 .span_stat {
   display: block;
-  margin-top: 2rem;
-  font-size: 1.2rem;  
+  margin-top: 3vh;
+  font-size: 1.5rem;  
   text-align: center;
   background-color: rgb(240, 248, 255);
+  box-shadow: 0rem 0rem 7rem 5rem rgba(0, 0, 255, 0.473);
+
+  
 }
